<resources>
    <string name="app_name">EP1</string>
    <string name="login">Login</string>
    <string name="logout">Log out</string>
    <string name="refresh">Refresh</string>
    <string name="NUSP_hint">NUSP</string>
    <string name="Pass_hint">Password</string>
    <string name="linkSignUp">Create account</string>
    <string name="signup">Sign Up</string>
    <string name="linkLogin">Already have an account? Log In</string>
    <string name="name_hint">Name</string>
    <string name="enroll">Enroll:</string>
    <string name="newSeminar">New Seminar</string>
    <string name="deleteSeminar">Delete Seminar?</string>
    <string name="deleteSeminarExplanation">You are about to delete this seminar. There is no going back. Are you sure you want to do this?</string>
    <string name="seminar_delete_success">Seminar successfully deleted.</string>
    <string name="OK">OK</string>
    <string name="cancel">Cancel</string>
    <string name="login_fail">Log In failed. Try again</string>
    <string name="delete_seminar">Delete</string>
    <string name="seminars_participants">All students enrolled:</string>
    <string name="qrcode_info">Scan a QR Code to enroll in this seminar.</string>
    <string name="nfc_info">Enroll via NFC connection.</string>
    <string name="signup_title">Welcome</string>
    <string name="login_title">Welcome back</string>
    <string name="profile_title">All Seminars</string>
    <string name="seminar_title">Seminar Details</string>
    <string name="student">Student</string>
    <string name="teacher">Teacher</string>
    <string name="qrcode">QR Code</string>
    <string name="generatingQR">Generating QR Code ... Please wait</string>
    <string name="seminar_created_succsess">created</string>
    <string name="seminar_created_faliure">Error creating new seminar</string>
    <string name="seminars_retrieval">Retrieving seminar list...</string>
    <string name="students_retrieval">Retrieving student list...</string>
    <string name="empty_student_list">No students enrolled in this seminar yet.</string>
    <string name="shared_preferences_file">SHARED_PREFERENCES_FILE</string>
    <string name="incorrect_info">Invalid parameters</string>
    <string name="signup_fail">Sign Up failed. Try again</string>
    <string name="wrong_seminar">Wrong seminar</string>
    <string name="enroll_success">You are enrolled in this seminar</string>
    <string name="enroll_fail">Enrollment failed. Try again</string>
    <string name="no_students_enrolled">No students enrolled yet</string>
    <string name="seminar_delete_fail">Impossible to delete this seminar: there are students enrolled.</string>
    <string name="no_scanner">No Scanner foundd</string>
    <string name="editprofile">Edit Profile</string>
    <string name="save_changes">Save Changes</string>
    <string name="new_pass_hint">New Password</string>
    <string name="edit_success">Profile successfully edited</string>
    <string name="edit_failed">Failed editing profile</string>
    <string name="request_failure">No connection to server</string>
    <string name="authentication">Authenticating...</string>
    <string name="creating_accont">Creating account...</string>
    <string name="new_seminar_hint">Enter the name of the new seminar</string>
    <string name="new_seminar_fail">Invalid input</string>
</resources>
