<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/login_signup_layout_padding_lr"
    android:paddingRight="@dimen/login_signup_layout_padding_lr"
    android:paddingTop="@dimen/login_signup_layout_padding_top"
    tools:context="ep1.joaofran.com.ep1.SignUpActivity">

    <TextView
        android:id="@+id/StvSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/login_signup_margin_small"
        android:text="@string/signup"
        android:textSize="@dimen/login_signup_title_textsize"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/SetInsertName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/SetInsertPassword"
        android:layout_marginBottom="@dimen/login_signup_margin_small"
        android:layout_marginTop="@dimen/login_signup_margin_small"
        android:hint="@string/name_hint"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/SetInsertNUSP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/SetInsertPassword"
        android:layout_marginBottom="@dimen/login_signup_margin_small"
        android:layout_marginTop="@dimen/login_signup_margin_small"
        android:hint="@string/NUSP_hint"
        android:inputType="number"
        android:maxLength="7" />

    <EditText
        android:id="@+id/SetInsertPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/SbtnSignUp"
        android:layout_marginBottom="@dimen/login_signup_margin_small"
        android:layout_marginTop="@dimen/login_signup_margin_small"
        android:cursorVisible="true"
        android:hint="@string/Pass_hint"
        android:inputType="textPassword" />

    <RadioGroup
        android:id="@+id/SrgSignupType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:checkedButton="@+id/SrbStudent"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/SrbStudent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:buttonTint="@android:color/darker_gray"
            android:text="@string/student"
            android:textColor="@android:color/darker_gray" />

        <RadioButton
            android:id="@+id/SrbTeacher"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:buttonTint="@android:color/darker_gray"
            android:text="@string/teacher"
            android:textColor="@android:color/darker_gray" />
    </RadioGroup>


    <Button
        android:id="@+id/SbtnSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/login_signup_margin_large"
        android:layout_marginTop="@dimen/login_signup_margin_large"
        android:onClick="signUp"
        android:padding="@dimen/login_signup_button_padding"
        android:text="@string/signup"
        android:textColorLink="@android:color/darker_gray" />

    <TextView
        android:id="@+id/StvLinkSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/login_signup_margin_large"
        android:clickable="true"
        android:onClick="linkLogin"
        android:text="@string/linkLogin"
        android:textColor="@android:color/holo_blue_light" />

</LinearLayout>
