<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ep1.joaofran.com.ep1.LoginActivity"
    android:orientation="vertical"
    android:paddingTop="70dp"
    android:paddingLeft="@dimen/login_signup_layout_padding_lr"
    android:paddingRight="@dimen/login_signup_layout_padding_lr">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:id="@+id/LtvLogin"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/login_signup_margin_small"
        android:textStyle="bold"
        android:textSize="@dimen/login_signup_title_textsize"
        android:layout_gravity="center"/>

    <EditText
        android:id="@+id/LetNUSP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/etPassword"
        android:layout_marginTop="@dimen/login_signup_margin_small"
        android:layout_marginBottom="@dimen/login_signup_margin_small"
        android:hint="@string/NUSP_hint"
        android:inputType="number"
        android:maxLength="7" />

    <EditText
        android:id="@+id/LetPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnLogin"
        android:layout_marginBottom="@dimen/login_signup_margin_small"
        android:layout_marginTop="@dimen/login_signup_margin_small"
        android:cursorVisible="true"
        android:hint="@string/Pass_hint"
        android:inputType="textPassword" />

    <RadioGroup
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:checkedButton="@+id/LrbStudent"
        android:id="@+id/LrgLoginType">

        <RadioButton
            android:id="@+id/LrbStudent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/student" />

        <RadioButton
            android:id="@+id/LrbTeacher"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/teacher" />
    </RadioGroup>

    <Button
        android:id="@+id/LbtnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/login_signup_margin_large"
        android:layout_marginBottom="@dimen/login_signup_margin_large"
        android:padding="@dimen/login_signup_button_padding"
        android:text="@string/login"
        android:textColorLink="@android:color/darker_gray"
        android:onClick="login" />

    <TextView
        android:id="@+id/LtvLinkSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/login_signup_margin_large"
        android:clickable="true"
        android:onClick="linkSignUp"
        android:text="@string/linkSignUp"
        android:textColor="@android:color/holo_blue_light" />


</LinearLayout>
