<?xml version="1.0" encoding="utf-8"?>

<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="50dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:weightSum="1"
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/etSeminarName"
            android:textStyle="bold"
            android:textSize="35dp"
            android:layout_marginBottom="25dp"
            android:maxHeight="170dp"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">

            <Button
                android:id="@+id/bntGenQR"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/qrcode"
                android:onClick="showQR"
                android:focusable="true"
                android:textSize="15dp"
                android:layout_marginRight="40dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:textAllCaps="true"
                />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delete_seminar"
                android:textColor="@android:color/holo_red_light"
                android:textSize="15dp"
                android:clickable="true"
                android:elevation="8dp"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginRight="10dp"
                android:textAllCaps="true"
                android:onClick="deleteSeminar"
                />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/seminars_participants"
            android:textColor="@android:color/black"
            android:layout_gravity="start"
            android:textSize="20dp"/>


        <ListView
            android:id="@+id/lvStudents"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="20dp">

        </ListView>


    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fabBarcodeScanner"
        app:borderWidth="0dp"
        app:layout_anchorGravity="bottom|right|end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_gravity="bottom|right"
        android:layout_marginBottom="24dp"
        android:layout_marginRight="24dp"
        android:clickable="true"
        android:elevation="8dp"
        android:onClick="scanBarcode"
        android:src="@drawable/ic_barcode_scan"
        android:tint="@android:color/white" />

</android.support.design.widget.CoordinatorLayout>